fix title align

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -246,10 +246,6 @@ a:hover, a:active, a:focus {
   animation: spinner .9s linear infinite;
 }
 
-@-webkit-@keyframes spinner {
-  to {transform: rotate(360deg);}
-}
-
 @keyframes spinner {
   to {transform: rotate(360deg);}
 }
@@ -463,6 +459,7 @@ a:hover, a:active, a:focus {
 }
 
 .section-title h1 {
+  display: flexbox;
   text-align: center;
 }
 
